--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,14 +18,15 @@
 
             <TextView
                 android:id="@+id/toolbar_home_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="72dp"
+                android:maxLines="2"
                 android:paddingStart="16dp"
                 android:paddingTop="32dp"
+                android:paddingEnd="16dp"
                 android:paddingBottom="24dp"
-                android:textColor="@color/shoppi_black_02"
-                android:textSize="24sp"
-                android:textStyle="bold"
+                style="@style/TextHeadLine5.Black02.Bold"
                 tools:text="DORIAN님, 이런 상품\n어때요?" />
 
             <ImageView
@@ -34,9 +35,9 @@
                 android:layout_height="68dp"
                 android:layout_gravity="end"
                 android:layout_marginEnd="4dp"
+                android:contentDescription="@string/title_logo_icon_description"
                 android:scaleType="center"
-                tools:src="@drawable/ic_gnb_back"
-                android:contentDescription="@string/title_logo_icon_description" />
+                tools:src="@drawable/ic_gnb_back" />
 
         </androidx.appcompat.widget.Toolbar>
 
