--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -37,7 +37,7 @@
         <TextView
             android:id="@+id/tv_category_badge"
             style="@style/TextCaption2.White.Bold"
-            isVisible="@{category.updated"
+            isVisible="@{category.updated}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="27dp"
