--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -68,7 +68,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cd_category_thumbnail"
-            tools:Text="여성패션" />
+            tools:text="여성패션" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
