--- a/app/src/main/res/layout/item_home_banner.xml
+++ b/app/src/main/res/layout/item_home_banner.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="viewModel"
+            type="com.shoppi.app.ui.home.HomeViewModel" />
+
         <variable
             name="banner"
             type="com.shoppi.app.model.Banner" />
@@ -11,38 +16,48 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:onClick="@{()->viewModel.openProductDetail(banner.productDetail.productId)}"
         android:layout_height="match_parent">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/cd_banner_image"
+            imageUrl="@{banner.backgroundImageUrl}"
             android:layout_width="312dp"
             android:layout_height="343dp"
             android:layout_marginStart="16dp"
-            android:scaleType="centerCrop"
             android:contentDescription="@string/description_home_banner_image"
-            imageUrl="@{banner.backgroundImageUrl}"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/RoundedBig" />
 
-    <TextView
-        android:id="@+id/tv_banner_badge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
-        android:layout_marginBottom="7dp"
-        android:paddingStart="7dp"
-        android:paddingTop="1dp"
-        android:paddingEnd="7dp"
-        android:paddingBottom="1dp"
-        android:textColor="@color/shoppi_white"
-        app:layout_constraintBottom_toTopOf="@id/tv_banner_title"
-        app:layout_constraintStart_toStartOf="@id/cd_banner_image"
-        tools:background="@{banner.badge.backgroundColor}"
-        tools:text="기획전"
-        android:text="@{banner.badge.label}"
+        <View
+            android:layout_width="0dp"
+            android:layout_height="202dp"
+            android:background="@drawable/background_black_gradient"
+            app:layout_constraintBottom_toBottomOf="@id/cd_banner_image"
+            app:layout_constraintEnd_toEndOf="@id/cd_banner_image"
+            app:layout_constraintStart_toStartOf="@id/cd_banner_image" />
+
+        <TextView
+            android:id="@+id/tv_banner_badge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="26dp"
+            android:layout_marginBottom="7dp"
+            android:paddingStart="7dp"
+            android:paddingTop="1dp"
+            android:paddingEnd="7dp"
+            android:paddingBottom="1dp"
+            android:text="@{banner.badge.label}"
+            style="@style/TextCaption1.White"
+            android:textColor="@color/shoppi_white"
+            app:layout_constraintBottom_toTopOf="@id/tv_banner_title"
+            app:layout_constraintStart_toStartOf="@id/cd_banner_image"
+            tools:background="@{banner.badge.backgroundColor}"
+            tools:text="기획전"
 
             />
-
 
         <TextView
             android:id="@+id/tv_banner_title"
@@ -50,16 +65,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
+            android:maxLines="2"
+            style="@style/TextHeadLine32.White.Bold"
             android:layout_marginBottom="24dp"
+            android:text="@{banner.label}"
             app:layout_constraintBottom_toTopOf="@id/bg_banner_product_detail"
             app:layout_constraintEnd_toEndOf="@id/cd_banner_image"
             app:layout_constraintStart_toStartOf="@id/cd_banner_image"
-            android:text="@{banner.label}"
             tools:text="따스한 겨울\n준비하기" />
 
         <View
             android:id="@+id/bg_banner_product_detail"
-            android:layout_width="288dp"
+            android:layout_width="0dp"
             android:layout_height="85dp"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
@@ -69,16 +86,17 @@
             app:layout_constraintEnd_toEndOf="@+id/cd_banner_image"
             app:layout_constraintStart_toStartOf="@+id/cd_banner_image" />
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/cd_banner_detail_thumbnail"
+            imageUrl="@{banner.productDetail.thumbnailImageUrl}"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
             android:contentDescription="@string/description_product_detail_image"
-            imageUrl="@{banner.productDetail.thumbnailImageUrl}"
             app:layout_constraintStart_toStartOf="@id/bg_banner_product_detail"
-            app:layout_constraintTop_toTopOf="@id/bg_banner_product_detail" />
+            app:layout_constraintTop_toTopOf="@id/bg_banner_product_detail"
+            app:shapeAppearanceOverlay="@style/RoundedMedium" />
 
         <TextView
             android:id="@+id/tv_banner_detail_brand_label"
@@ -86,6 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="9dp"
+            style="@style/TextSubtitle3.Bold"
             android:layout_marginEnd="16dp"
             android:ellipsize="end"
             android:maxLines="1"
@@ -99,17 +118,19 @@
             android:id="@+id/tv_banner_detail_product_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/TextCaption1.Grey03"
             android:layout_marginTop="1dp"
+            android:text="@{banner.productDetail.label}"
             app:layout_constraintEnd_toEndOf="@id/tv_banner_detail_brand_label"
             app:layout_constraintStart_toStartOf="@id/tv_banner_detail_brand_label"
             app:layout_constraintTop_toBottomOf="@id/tv_banner_detail_brand_label"
-            android:text="@{banner.productDetail.label}"
             tools:text="캐시미어 100% 터틀넥 스웨터" />
 
         <TextView
             android:id="@+id/tv_banner_detail_product_discount_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/TextSubtitle2.Purple.Bold"
             android:layout_marginTop="7dp"
             android:text="@{@string/unit_discount_rate(banner.productDetail.discountRate)}"
             app:layout_constraintStart_toStartOf="@id/tv_banner_detail_product_label"
@@ -118,22 +139,25 @@
 
         <TextView
             android:id="@+id/tv_banner_detail_product_discount_price"
+            discountRate="@{banner.productDetail.discountRate}"
+            priceAmount="@{banner.productDetail.price}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/TextSubtitle1.Bold"
             android:layout_marginStart="6dp"
-            priceAmount="@{banner.productDetail.price}"
-            discountRate="@{banner.productDetail.discountRate}"
             app:layout_constraintBottom_toBottomOf="@id/tv_banner_detail_product_discount_rate"
             app:layout_constraintStart_toEndOf="@id/tv_banner_detail_product_discount_rate"
             tools:text="89,000원" />
 
         <TextView
             android:id="@+id/tv_banner_detail_product_price"
+            priceAmount="@{banner.productDetail.price}"
+            strikeThrough="@{true}"
             android:layout_width="wrap_content"
+            style="@style/TextCaption1.Grey05"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="1dp"
-            priceAmount="@{banner.productDetail.price}"
             app:layout_constraintBottom_toBottomOf="@id/tv_banner_detail_product_discount_price"
             app:layout_constraintStart_toEndOf="@id/tv_banner_detail_product_discount_price"
             tools:text="100,000원" />
